--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="card", style="position: absolute; top: 35%; left: 50%; -moz-transform: translateX(-50%) translateY(-50%); -webkit-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); max-width: 900px">
 		<div style="float:left; width: 140px; height: 100%; overflow: auto; display: inline-block;">
-			<img src="logo.png" alt="Logo">
+			<img src="Logo.png" alt="Logo">
 		</div>
 		<h1 style="display: inline; float: top;"> The Pink Fairies </h1>
 		<br>
