--- a/tspreview/index.html
+++ b/tspreview/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<div class="card" >
-		<span id="its284646"><a href="https://www.teamspeak3.com/">teamspeak server</a> Hosting by TeamSpeak3.com</span><script type="text/javascript" src="https://view.light-speed.com/teamspeak3.php?IP=cavansite.typefrag.com&PORT=4970&QUERY=10011&UID=284646&display=block&font=12px&background=transparent&server_info_background=transparent&server_info_text=%23000000&server_name_background=transparent&server_name_text=%23000000&info_background=transparent&channel_background=transparent&channel_text=%23000000&username_background=transparent&username_text=%23000000"></script>
+		<span id="its227190"><a href="https://www.teamspeak3.com/">teamspeak</a> Hosting by TeamSpeak3.com</span><script type="text/javascript" src="https://view.light-speed.com/teamspeak3.php?IP=voice.fairies.pink&PORT=9987&QUERY=10011&UID=227190&display=block&font=11px&background=transparent&server_info_background=transparent&server_info_text=%23000000&server_name_background=transparent&server_name_text=%23000000&info_background=transparent&channel_background=transparent&channel_text=%23000000&username_background=transparent&username_text=%23000000"></script>
 	</div>
 </body>
+
