--- a/discord/index.html
+++ b/discord/index.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 <head>
     <title>Discord | Pink Fairies</title>
-    <link rel="stylesheet" href="pink.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
